--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1402,7 +1402,7 @@ if (onnxruntime_USE_CUDA)
     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --Werror default-stream-launch")
   endif()
   if (NOT WIN32)
-    list(APPEND CUDA_NVCC_FLAGS --compiler-options -fPIC)
+    list(APPEND CUDA_NVCC_FLAGS --generate-line-info --compiler-options -fPIC)
   endif()
   # Options passed to cudafe
   set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcudafe \"--diag_suppress=bad_friend_decl\"")
