Update edch-test.yml for Azure Pipelines

--- a/tools/ci_build/github/azure-pipelines/edch-test.yml
+++ b/tools/ci_build/github/azure-pipelines/edch-test.yml
@@ -5,6 +5,11 @@ jobs:
   steps:
   - checkout: none
   - bash: |
-      python3 --version
-      pwd
-      hostname
+      set -e -x
+      conda create --name test_env --yes python=3.9
+      conda activate test_env
+      which python
+
+  - bash: |
+      set -e -x
+      conda env remove --name test_env --yes
