Update edch-test.yml for Azure Pipelines

--- a/tools/ci_build/github/azure-pipelines/edch-test.yml
+++ b/tools/ci_build/github/azure-pipelines/edch-test.yml
@@ -6,6 +6,7 @@ jobs:
   - checkout: none
   - bash: |
       set -e -x
+      env
       conda create --name test_env --yes python=3.9
       conda activate test_env
       which python
