Update edch-test.yml for Azure Pipelines

--- a/tools/ci_build/github/azure-pipelines/edch-test.yml
+++ b/tools/ci_build/github/azure-pipelines/edch-test.yml
@@ -11,8 +11,7 @@ jobs:
   - bash: |
       set -e -x
       conda create --name test_env --yes python=3.9
-      conda activate test_env
-      which python
+      ~/.conda/envs/test_env/bin/python --version
 
   - bash: |
       set -e -x
