--- a/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
@@ -25,6 +25,8 @@ jobs:
       echo "##vso[task.prependpath]~/.conda/envs/$(condaEnvName)/bin"
     displayName: Create conda environment '$(condaEnvName)' and add to PATH
 
+  - bash: echo $PATH ; which python
+
   - bash: |
       python -m pip install cmake~=$(cmakeVersion).0
     displayName: Install CMake $(cmakeVersion)
