--- a/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
@@ -22,10 +22,9 @@ jobs:
       # Do not output ##vso[] commands with `set -x` or they may be parsed again and include a trailing quote.
       set +x
       # 'conda activate' doesn't work in this context, so we just prepend the env directory to path
-      echo "##vso[task.prependpath]~/.conda/envs/$(condaEnvName)/bin"
+      CONDA_ENV_BIN_DIR="~/.conda/envs/$(condaEnvName)/bin"
+      echo "##vso[task.prependpath]${CONDA_ENV_BIN_DIR}"
     displayName: Create conda environment '$(condaEnvName)' and add to PATH
-
-  - bash: echo $PATH ; which python
 
   - bash: |
       python -m pip install cmake~=$(cmakeVersion).0
