add job timeout

--- a/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
@@ -7,6 +7,8 @@ jobs:
     pythonVersion: 3.9
     cmakeVersion: 3.27.4
 
+  timeoutInMinutes: 60
+
   steps:
 
   # Note: We will use a dedicated conda environment to keep the Python dependencies contained.
