clean workspace first

--- a/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
@@ -1,5 +1,6 @@
 jobs:
 - job: MacArm64Build
+
   pool: onnxruntime-mac-m1-cpu
 
   variables:
@@ -8,6 +9,9 @@ jobs:
     cmakeVersion: 3.27.4
 
   timeoutInMinutes: 60
+
+  workspace:
+    clean: all
 
   steps:
 
