fix variable reference

--- a/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/mac-arm64-ci-pipeline.yml
@@ -9,7 +9,7 @@ jobs:
     cmakeVersion: 3.27.4
     jobTimeoutInMinutes: 60
 
-  timeoutInMinutes: $(jobTimeoutInMinutes)
+  timeoutInMinutes: ${{ variables.jobTimeoutInMinutes }}
 
   workspace:
     clean: all
