--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cuda.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cuda.yml
@@ -33,3 +33,15 @@ stages:
     agent_pool: Onnxruntime-Linux-GPU
     upload_wheel: 'no'
     debug_build: true
+
+- template: templates/py-packaging-training-cuda-stage.yml
+  parameters:
+    build_py_parameters: --enable_training --update --build
+    torch_version: '2.0.0'
+    opset_version: '15'
+    cuda_version: '12.1'
+    cmake_cuda_architectures: 60;61;70;75;80;86;90
+    docker_file: Dockerfile.manylinux2_28_training_cuda12_1
+    agent_pool: Onnxruntime-Linux-GPU
+    upload_wheel: 'yes'
+    debug_build: false
