--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cuda.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cuda.yml
@@ -15,6 +15,7 @@ stages:
     torch_version: '2.0.0'
     opset_version: '15'
     cuda_version: '11.8'
+    cuda_version_nodot: '118'
     cmake_cuda_architectures: 60;61;70;75;80;86;90
     docker_file: Dockerfile.manylinux2_28_training_cuda11_8
     agent_pool: Onnxruntime-Linux-GPU
@@ -28,6 +29,7 @@ stages:
     torch_version: '2.0.0'
     opset_version: '15'
     cuda_version: '11.8'
+    cuda_version_nodot: '118'
     cmake_cuda_architectures: 70;75;80;86
     docker_file: Dockerfile.manylinux2_28_training_cuda11_8
     agent_pool: Onnxruntime-Linux-GPU
@@ -40,6 +42,7 @@ stages:
     torch_version: '2.0.0'
     opset_version: '15'
     cuda_version: '12.1'
+    cuda_version_nodot: '121'
     cmake_cuda_architectures: 60;61;70;75;80;86;90
     docker_file: Dockerfile.manylinux2_28_training_cuda12_1
     agent_pool: Onnxruntime-Linux-GPU
