--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"animejs": "^3.2.1",
+		"saos": "^1.3.1",
 		"svelte-icons": "^2.1.0",
 		"sveltejs-adapter-ipfs": "^0.4.12",
 		"theme-change": "^2.5.0"
