Made changes after discussion w/ Faith.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@types/animejs": "^3.1.7",
 		"@types/gtag.js": "^0.0.13",
+		"@types/jquery": "^3.5.20",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -27,6 +28,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"gh-pages": "^5.0.0",
+		"jquery": "^3.7.1",
 		"postcss": "^8.4.26",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
