Enabling "set_property(TARGET onnxruntime_test_all APPEND_STRING PROPERTY LINK_FLAGS " -s ASSERTIONS=2 -s SAFE_HEAP=1 -s STACK_OVERFLOW_CHECK=2")"

--- a/tools/ci_build/github/azure-pipelines/post-merge-jobs.yml
+++ b/tools/ci_build/github/azure-pipelines/post-merge-jobs.yml
@@ -6,7 +6,7 @@ stages:
       IsReleasePipeline: true
       PoolName: 'aiinfra-Win-CPU-2022-web-beta'
       BuildStaticLib: true
-      ExtraBuildArgs: ''
+      ExtraBuildArgs: 'onnxruntime_POST_MERGE_WASM_TESTING'
 
 # This stage is to test if the combined build works on
 # o Windows ARM64
