--- a/tools/ci_build/github/azure-pipelines/post-merge-jobs.yml
+++ b/tools/ci_build/github/azure-pipelines/post-merge-jobs.yml
@@ -6,7 +6,7 @@ stages:
       IsReleasePipeline: true
       PoolName: 'aiinfra-Win-CPU-2022-web-beta'
       BuildStaticLib: true
-      ExtraBuildArgs: 'onnxruntime_POST_MERGE_WASM_TESTING'
+      ExtraBuildArgs: ''
 
 # This stage is to test if the combined build works on
 # o Windows ARM64
