Adding cmake and yml files

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1703,9 +1703,12 @@ if (WIN32 AND NOT GDK_PLATFORM)
   endif()
 endif()
 
-foreach(target_name ${ONNXRUNTIME_CMAKE_FILES})
+foreach (target_name ${ONNXRUNTIME_CMAKE_FILES})
   include(${target_name}.cmake)
-endforeach()
+  if (${target_name} STREQUAL "onnxruntime_unittests" AND onnxruntime_POST_MERGE_WASM_TESTING)
+    enable_post_merge_testing(onnxruntime_POST_MERGE_WASM_TESTING)
+  endif ()
+endforeach ()
 if (UNIX)
   option(BUILD_PKGCONFIG_FILES "Build and install pkg-config files" ON)
 else()
