Adding onnxruntime_ENABLE_WEBASSEMBLY_THREADS options to top level

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -93,6 +93,7 @@ option(onnxruntime_BUILD_OBJC "Build Objective-C library" OFF)
 option(onnxruntime_USE_PREINSTALLED_EIGEN "Use pre-installed EIGEN. Need to provide eigen_SOURCE_PATH if turn this on." OFF)
 option(onnxruntime_BUILD_BENCHMARKS "Build ONNXRuntime micro-benchmarks" OFF)
 option(onnxruntime_USE_LLVM "Build TVM with LLVM" OFF)
+option(onnxruntime_POST_MERGE_WASM_TESTING "Enabling Additional Post Merge testing for WASM" OFF)
 
 cmake_dependent_option(onnxruntime_USE_FLASH_ATTENTION "Build flash attention kernel for scaled dot product attention" ON "NOT WIN32; onnxruntime_USE_CUDA" OFF)
 option(onnxruntime_USE_MEMORY_EFFICIENT_ATTENTION "Build memory efficient attention kernel for scaled dot product attention" ON)
@@ -1705,9 +1706,6 @@ endif()
 
 foreach (target_name ${ONNXRUNTIME_CMAKE_FILES})
   include(${target_name}.cmake)
-  if (${target_name} STREQUAL "onnxruntime_unittests" AND onnxruntime_POST_MERGE_WASM_TESTING)
-    enable_post_merge_testing(onnxruntime_POST_MERGE_WASM_TESTING)
-  endif ()
 endforeach ()
 if (UNIX)
   option(BUILD_PKGCONFIG_FILES "Build and install pkg-config files" ON)
