--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -50,6 +50,8 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 # NOTE: POSITION INDEPENDENT CODE hurts performance, and it only make sense on POSIX systems
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
 # Enable CTest
 enable_testing()
 include(Dart)
